--- a/styles/manage_user_access.css
+++ b/styles/manage_user_access.css
@@ -172,6 +172,7 @@ body {
     align-items: center;
     margin: 20px 20px 20px 20px;
     padding: 20px;
+    
 }
 
 .manage-user-access-header {
@@ -201,8 +202,19 @@ body {
 }
 
 .add-button {
-    display: none;
+    display: block; /* Ensure it is visible */
+    padding: 10px 15px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
 }
+
+.add-button:hover {
+    background-color: #0056b3;
+}
+ */
 
 .manage-user-access-table {
     width: 90%;
@@ -236,4 +248,48 @@ td:nth-child(2) {
     height: 50px;
     border-radius: 50%;
     object-fit: cover;
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: white;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.edit-button {
+    background-color: #0B192C;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+}
+.delete-button {
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
 }
