Co-authored-by: ---- <Mabarredo09@users.noreply.github.com> Co-authored-by: H3X <FcknHex@users.noreply.github.com>

--- a/styles/manage_user_access.css
+++ b/styles/manage_user_access.css
@@ -293,3 +293,17 @@ td:nth-child(2) {
     padding: 10px;
     cursor: pointer;
 }
+.addbutton1 {
+    background-color: #0B192C;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+}
+.input-row {
+    /* display: flex; */
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
